--- a/directive/public/addfriendlis.html
+++ b/directive/public/addfriendlis.html
@@ -1,15 +1,16 @@
 <!-- 社区下面好友列表 -->
-    <div class="ld_friend" ng-repeat="v in friendqunlis track by $index">
+    <div class="ld_friend" ng-repeat="v in addfriendlis track by $index">
         <div class="ld_friend_photo">
             <a href="#/friend">
                 <div class="ld_friend_inner"><img src="images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div>
             </a>
         </div>
         <ul class="ld_friend_con">
-            <li class="ld_friend_tit">{{v.title}}·<b>{{v.title1}}</b><div class="ld_star"><span></span><span></span><span></span></div></li>
+            <li class="ld_friend_tit">{{v.title}}·<b>{{v.title1}}</b><div class="ld_star"><span></span><span></span><span></span></div><i class="ld_vip" ng-show="{{v.vipflag}}">vip</i></li>
             <li>{{v.mes}}</li>
             <li class="ld_friend_zs"><i></i><b>{{v.local}}</b>{{v.local1}}</li>
         </ul>
-        <div class="ld_sy_num ld_sy_numactive"><a href="{{v.url}}">{{v.num}}</a></div>
+        <i class="ld_addfriend">已添加</i>
+        <!-- <div class="ld_sy_num ld_sy_numactive"><a href="{{v.url}}">已添加</a></div> -->
         <!-- <div ng-class="{true:'ld_firend_rig ld_firend_huise',false:'ld_firend_rig'}[{{v.iphone}}]"></div> -->
     </div>
