--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css" href="pages/show/show.css" />
     <link rel="stylesheet" type="text/css" href="pages/bookcover/bookcover.css" />
     <link rel="stylesheet" type="text/css" href="pages/friend/friend.css" />
+    <link rel="stylesheet" type="text/css" href="pages/friendqun/friendqun.css" />
+    <link rel="stylesheet" type="text/css" href="pages/addfriend/addfriend.css" />
+    <link rel="stylesheet" type="text/css" href="pages/special/special.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -33,13 +36,15 @@
 <script type="text/javascript" src="pages/friend/friend.js"></script>
 <script type="text/javascript" src="pages/me/me.js"></script>
 <script type="text/javascript" src="pages/friendqun/friendqun.js"></script>
+<script type="text/javascript" src='pages/addfriend/addfriend.js'></script>
+<script type="text/javascript" src="pages/special/special.js"></script>
 <script type="text/javascript" src="index.js"></script>
 
 
 <body>
     <div ng-view></div>
     <!-- 首页tab -->
-    <div class="mjh-sy-tab" ng-controller="ctrl">
+    <!-- <div class="mjh-sy-tab" ng-controller="ctrl">
         <a href="#/shujia" class="mjh-sy-tabt">
             <img src="images/mjh/sy-mjh_83.png" alt="" />
             <p>书架</p>
@@ -57,7 +62,7 @@
             <p>账户</p>
         </a>
     </div>
-    <div class="footer"></div>
+    <div class="footer"></div> -->
 </body>
 
 </html>
