--- a/pages/friendqun/friendqun.html
+++ b/pages/friendqun/friendqun.html
@@ -1,2 +1,5 @@
 <!-- 好友群列表 -->
-    <friendqunlis></friendqunlis>
+    <div class="ld_qundi">
+        <friendqunlis></friendqunlis>
+    </div>
+    
