--- a/pages/login/login-mjh/login_mjh.html
+++ b/pages/login/login-mjh/login_mjh.html
@@ -13,6 +13,7 @@
 <body>
     <div class="mjh-dl-wk">
         <img src="../../../images/yhp_images/yhp_backbtn.png" alt="" class="mjh-dl-fh" />
+        <a href="../zlf_zhuce/zhuce.html" class="mjh-dl-tozc">注册</a>
         <img src="../../../images/yhp_images/yhp_loginup.png" alt="" class="mjh-dl-bg1" />
         <img src="../../../images/yhp_images/yhp_loginbottom.png" alt="" class="mjh-dl-bg2" />
         
@@ -28,7 +29,7 @@
                 <input type="checkbox"/>记住密码
                 <input type="button" value='找回密码'>
             </div>
-            <div class="mjh-sl-sub active" >  
+            <div class="mjh-sl-sub" >  
             </div>
             <!-- 错误提示 -->
             <div class="mjh-dl-ts">
@@ -41,7 +42,7 @@
             <div class="mjh-dl-ts1">
                 <div class="mjh-ts-zs1"></div>
                 <div class="mjh-ts-zs2"></div>
-                <div class="mjh-ts-ts1">当前用户名不从在</div>
+                <div class="mjh-ts-ts1">当前用户名不存在</div>
                 <div class="mjh-ts-zs2"></div>
                 <div class="mjh-ts-zs1"></div>
             </div>
@@ -53,7 +54,7 @@
                 <a href="##"><img src="../../../images/yhp_images/yhp_chat.png" alt="" /></a>
             </div>
             <!-- 用户选择 -->
-            <div class="mjh-dl-yhxz">
+            <div class="mjh-dl-yhxz" hidden>
                 <a href="##">
                     <div><img src="../../../images/yhp_images/yhp_loginheader.png" alt="" /></div>
                     <p>afg</p>
@@ -76,5 +77,7 @@
 <script type="text/javascript" src="../../../js/zepto.js"></script>
 <script type="text/javascript" src="../../../js/touch.js"></script>
 <script type="text/javascript"src="../../../js/swiper-3.4.0.min.js"></script>
+<script type="text/javascript" src="../zlf_zhuce/zhuce.js"></script>
 <script type="text/javascript" src="../../../js/index.js"></script>
+
 <script type="text/javascript" src="login_mjh.js"></script>
