--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -13,12 +13,13 @@
 <body>
     <div class="zlf_dl_wk">
         <img src="../../../images/yhp_images/yhp_backbtn.png" alt="" class="zlf_dl_back" />
+        <a href="../login-mjh/login_mjh.html" class="mjh-dl-todl">登录</a>
         <img src="../../../images/zlf_images/zlf_zc_05.png" alt="" class="zlf_dl_bg1" />
         <img src="../../../images/zlf_images/zlf_zc_29.png" alt="" class="zlf_dl_bg2" />
 
 
         <!-- 01 基本信息 开始-->
-        <div class="zlf_xq_box">
+        <div class="zlf_xq_box mjh-zc1">
              <div class="zlf_num">01</div>
              <div class="zlf_choose">
                  <div class="zlf_choose_c">基本信息</div>
@@ -27,7 +28,7 @@
                  </div>
              </div>
              <ul> 
-                 <li class="zlf_quan"></li>
+                 <li class="zlf_quan active"><img src="../../../images/zlf_images/zlf_zc_10.png" alt="" /></li>
                  <li class="zlf_xian"></li>
                  <li class="zlf_quan"></li>
                  <li class="zlf_xian"></li>
@@ -35,25 +36,25 @@
              </ul>
              <!-- 输入框 开始-->
              <div class="mjh-zc-srk">
-                <div class="mjh-zc-srnk active">
+                <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
                     <div class="mjh-srnk-d3">用户名</div>
-                    <input type="text" class="mjh-srnk-d4" />
+                    <input type="text" class="mjh-srnk-d4 mjh-zck-yhm" required="required" />
                     <img src="../../../images/mjh/mjh_zc_03.png" alt="" class="mjh-srnk-d5" />
                 </div>
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
                     <div class="mjh-srnk-d3">手机号</div>
-                    <input type="text" class="mjh-srnk-d4" />
+                    <input type="tel" class="mjh-srnk-d4 mjh-zck-sjh" required="required" />
                     <img src="../../../images/mjh/mjh_zc_07.gif" alt="" class="mjh-srnk-d5" />
                 </div>
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
                     <div class="mjh-srnk-d3">密码</div>
-                    <input type="text" class="mjh-srnk-d4" />
+                    <input type="password" class="mjh-srnk-d4 mjh-zck-mm1" required="required" />
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
                     <img src="../../../images/mjh/mjh_zc_11.gif" alt="" class="mjh-srnk-d5" />
                 </div>
@@ -61,21 +62,24 @@
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
                     <div class="mjh-srnk-d3">确认</div>
-                    <input type="text" class="mjh-srnk-d4" />
+                    <input type="password" class="mjh-srnk-d4 mjh-zck-mm2" required="required" />
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
                 </div>
-                 <div class="zlf_btn_box zlf_btn_box1">
+                 <div class="zlf_btn_box zlf_btn_box1 mjh-zc-btn1">
                      <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
              </div>
              <!-- 错误提示 -->
-             <p class="mjh-zc-cwts">用户名被注册过啦~</p>
+             <p class="mjh-zc-cwts mjh-zc-ts1" hidden>用户名被注册过啦~</p>
+             <p class="mjh-zc-cwts mjh-zc-ts2" hidden>手机号被使用过啦~</p>
+             <p class="mjh-zc-cwts mjh-zc-ts3" hidden>两次输入的密码不一致~</p>
+             <p class="mjh-zc-cwts mjh-zc-ts4" hidden>请输入正确的手机号</p>
              <!-- 输入框 结束-->
         </div>
         <!-- 01 基本信息 结束-->
         
         <!-- 02 头像选择 开始-->
-        <div class="zlf_xq_box" hidden>
+        <div class="zlf_xq_box mjh-zc2" hidden>
              <div class="zlf_num">02</div>
              <div class="zlf_choose">
                  <div class="zlf_choose_c">头像选择</div>
@@ -86,7 +90,7 @@
              <ul> 
                  <li class="zlf_quan"></li>
                  <li class="zlf_xian"></li>
-                 <li class="zlf_quan"></li>
+                 <li class="zlf_quan active"><img src="../../../images/zlf_images/zlf_zc_10.png" alt="" /></li>
                  <li class="zlf_xian"></li>
                  <li class="zlf_quan"></li>
              </ul>
@@ -101,7 +105,7 @@
                          <li class="zlf_btn_item zlf_btn_item1">翻相册</li>
                      </ul>
                  </div>
-                 <div class="zlf_btn_box">
+                 <div class="zlf_btn_box mjh-zc-btn2">
                      <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
              </div>
@@ -110,7 +114,7 @@
         <!-- 02 头像选择 结束-->
 
         <!-- 03 兴趣选择 开始-->
-        <div class="zlf_xq_box" hidden>
+        <div class="zlf_xq_box mjh-zc3" hidden>
              <div class="zlf_num">03</div>
              <div class="zlf_choose">
                  <div class="zlf_choose_c">兴趣选择</div>
@@ -123,56 +127,56 @@
                  <li class="zlf_xian"></li>
                  <li class="zlf_quan"></li>
                  <li class="zlf_xian"></li>
-                 <li class="zlf_quan"></li>
+                 <li class="zlf_quan active"><img src="../../../images/zlf_images/zlf_zc_10.png" alt="" /></li>
              </ul>
               <!-- 性别选择-->
-             <div class="zlf_xb_choose" hidden>
+             <div class="zlf_xb_choose mjh-zc31" >
                  <p class="zlf_xb">您的性别是：</p>
                  <div class="zlf_people_choose">
                      <div class="zlf_man">
                          <img src="../../../images/zlf_images/zlf_zc_13.png" alt="" />
                          <p>
-                             <input type="radio" />
+                             <input type="radio" name='sex' value='男生'/>
                              <span>男生</span>
                          </p>
                      </div>
                      <div class="zlf_man">
                          <img src="../../../images/zlf_images/zlf_zc_16.png" alt="" />
                         <p>
-                             <input type="radio" />
+                             <input type="radio" name='sex' value="女生" />
                              <span>女生</span>
                          </p>
                      </div>
                  </div>
-                 <div class="zlf_btn_box">
+                 <div class="zlf_btn_box mjh-zc-btn31">
                      <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
              </div>
              <!-- 喜欢的图书类型-->
-             <div class="zlf_xb_choose" >
+             <div class="zlf_xb_choose mjh-zc32" hidden>
                  <p class="zlf_xb">喜欢的图书类型：</p>
                  <div class="zlf_people_choose">
                      <div class="zlf_man zlf_like_book">
                          <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="xhlx" value="励志传奇1" />
                              <span>励志传奇</span>
                          </p>
                      </div>
                      <div class="zlf_man zlf_like_book">
                          <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="xhlx" value="励志传奇2" />
                              <span>励志传奇</span>
                          </p>
                      </div>
                  </div>
-                 <div class="zlf_btn_box">
+                 <div class="zlf_btn_box mjh-zc-btn32">
                      <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
              </div>
              <!-- 喜欢的作者-->
-             <div class="zlf_xb_choose" hidden>
+             <div class="zlf_xb_choose mjh-zc33" hidden>
                  <p class="zlf_xb zlf_like_zz">喜欢的作者：</p>
                  <div class="zlf_people_choose">
                      <div class="zlf_man zlf_like_author">
@@ -180,7 +184,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -189,7 +193,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -198,7 +202,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -207,7 +211,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -218,7 +222,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -227,7 +231,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -236,7 +240,7 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
@@ -245,12 +249,12 @@
                              <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          </div>
                          <p>
-                             <input type="checkbox" />
+                             <input type="checkbox" class="mjh-xhzz" value="韩寒" />
                              <span>韩寒</span>
                          </p>
                      </div>
                  </div>
-                 <div class="zlf_btn_box zlf_author_btn">
+                 <div class="zlf_btn_box  mjh-zc-btn33 zlf_author_btn">
                      <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
              </div>
@@ -260,5 +264,6 @@
     
 </body>
 </html>
+<script type="text/javascript" src="../../../js/zepto.js"></script>
 <script type="text/javascript" src="../../../js/rem.js"></script>
 <script type="text/javascript" src="zhuce.js"></script>
