--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -255,7 +255,7 @@
                      </div>
                  </div>
                  <div class="zlf_btn_box  mjh-zc-btn33 zlf_author_btn">
-                     <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
+                     <a href="../yhp_regsuccess/yhp_regsuccess.html"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
              </div>
         </div>
