--- a/pages/zhanghu/yhp_payment/yhp_payment.html
+++ b/pages/zhanghu/yhp_payment/yhp_payment.html
@@ -12,6 +12,7 @@
 <body>
 <!-- 支付外框开始 -->
 	<div class="yhp_payment_box">
+	<!-- 支付头部开始 -->
 		<div class="yhp_payment_up">
 			<label>
 				<button class="yhp_payment_back"></button>
@@ -24,8 +25,12 @@
 				<button class="yhp_payment_search"></button>
 			</label>
 		</div>
+	<!-- 支付头部结束 -->
+
+	<!-- 支付主体开始 -->
 		<div class="payment_bottom">
 			<div class="yhp_payment_inner">
+			<!-- 支付方式选择开始 -->
 				<ul class="yhp_payment_ul">
 					<li class="yhp_payment_li">
 						<a href="##">
@@ -72,6 +77,9 @@
 						</a>
 					</li>
 				</ul>
+			<!-- 支付方式选择结束 -->
+
+			<!-- 支付中介选择开始 -->
 				<div class="yhp_payment_choose">
 					<div class="yhp_chooseup">
 						<span class="yhp_chooseup_icon">	
@@ -91,9 +99,13 @@
 						</li>
 					</ul>
 				</div>
+			<!-- 支付中介选择结束 -->
+			
+			<!-- 方式选择确认按钮 -->
 				<label> <button class="yhp_choose_sure"></button></label>
 			</div>
 		</div>
+	<!-- 支付主体结束 -->
 	</div>
 <!-- 支付外框结束 -->
 </body>
