--- a/pages/login/lrc_logs3/lrc-logining3.html
+++ b/pages/login/lrc_logs3/lrc-logining3.html
@@ -110,7 +110,10 @@
 				<img src="../../../images/lrc_images/images/lrc_01.png" alt="">
 				<div class="lrc_tqq"></div>
 			</div>
-
+			<div class="lrc_tone">
+				<img src="../../../images/lrc_images/images/lrc_01.png" alt="">
+				<div class="lrc_tqq"></div>
+			</div>
 		</div>
 	</div>
 	<div class="lrc_bottom">
