--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="js/touch.js"></script>
 <script type="text/javascript" src="js/rem.js"></script>
 <script type="text/javascript" src="route.js"></script>
+<!-- <script type="text/javascript" src="index.js"></script> -->
 <script type="text/javascript" src="directive/directive.js"></script>
 <script type="text/javascript" src="pages/home/home.js"></script>
 <script type="text/javascript" src="pages/shujia/shujia.js"></script>
@@ -38,7 +39,7 @@
 <script type="text/javascript" src="pages/friendqun/friendqun.js"></script>
 <script type="text/javascript" src='pages/addfriend/addfriend.js'></script>
 <script type="text/javascript" src="pages/special/special.js"></script>
-<script type="text/javascript" src="index.js"></script>
+
 
 
 <body>
