--- a/directive/public/indextab.html
+++ b/directive/public/indextab.html
@@ -1,5 +1,5 @@
 <!-- 底部tab栏 -->
-<div class="mjh-sy-tab" ng-controller="ctrl">
+<!-- <div class="mjh-sy-tab" ng-controller="ctrl">
     <a href="#/shujia" class="mjh-sy-tabt">
         <img src="images/mjh/sy-mjh_83.png" alt="" />
         <p>书架</p>
@@ -17,4 +17,22 @@
         <p>账户</p>
     </a>
 </div>
-<div class="footer"></div>
+<div class="footer"></div> -->
+<div class="mjh-sy-tab">
+    <a href="#/shujia" class="mjh-sy-tabt">
+        <img src="images/mjh/sy-mjh_83.png" alt="" />
+        <p>书架</p>
+    </a>
+    <a href="#/" class="mjh-sy-tabt">
+        <img src="images/mjh/sy-mjh_86.png" alt="" />
+        <p>书库</p>
+    </a>
+    <a href="#/shequ" class="mjh-sy-tabt">
+        <img src="images/mjh/sy-mjh_77.png" alt="" />
+        <p>社区</p>
+    </a>
+    <a href="#/zhanghu" class="mjh-sy-tabt">
+        <img src="images/mjh/sy-mjh_80.png" alt="" />
+        <p>账户</p>
+    </a>
+</div>
