--- a/directive/public/shequletter.html
+++ b/directive/public/shequletter.html
@@ -1,5 +1,5 @@
 <!-- 社区下面英文块 -->
 <div ng-repeat="r in shequletter track by $index">
     <div class="ld_sy_letter" ><span>{{r.type}}.</span><span class="ld_sy_ltnum">{{r.sum}}</span></div>
-    <shequfriend></shequfriend>
+    <div class="ld_friend_left"><shequfriend></shequfriend></div>
 </div>
