--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -40,29 +40,29 @@
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
                     <div class="mjh-srnk-d3">用户名</div>
-                    <input type="text" class="mjh-srnk-d4 mjh-zck-yhm" required="required" />
+                    <input type="text" class="mjh-srnk-d4 mjh-zck-yhm" required="required"  placeholder='请输入用户名'/>
                     <img src="../../../images/mjh/mjh_zc_03.png" alt="" class="mjh-srnk-d5" />
                 </div>
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
                     <div class="mjh-srnk-d3">手机号</div>
-                    <input type="tel" class="mjh-srnk-d4 mjh-zck-sjh" required="required" />
+                    <input type="tel" class="mjh-srnk-d4 mjh-zck-sjh" required="required"  placeholder='请输入手机号'/>
                     <img src="../../../images/mjh/mjh_zc_07.gif" alt="" class="mjh-srnk-d5" />
                 </div>
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
-                    <div class="mjh-srnk-d3">密码</div>
-                    <input type="password" class="mjh-srnk-d4 mjh-zck-mm1" required="required" />
+                    <div class="mjh-srnk-d3">密&nbsp&nbsp&nbsp&nbsp码</div>
+                    <input type="password" class="mjh-srnk-d4 mjh-zck-mm1" required="required"  placeholder='请输入密码'/>
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
                     <img src="../../../images/mjh/mjh_zc_11.gif" alt="" class="mjh-srnk-d5" />
                 </div>
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
-                    <div class="mjh-srnk-d3">确认</div>
-                    <input type="password" class="mjh-srnk-d4 mjh-zck-mm2" required="required" />
+                    <div class="mjh-srnk-d3">确&nbsp&nbsp&nbsp&nbsp认</div>
+                    <input type="password" class="mjh-srnk-d4 mjh-zck-mm2" required="required"  placeholder='请再次输入密码'/>
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
                 </div>
                  <div class="zlf_btn_box zlf_btn_box1 mjh-zc-btn1">
@@ -74,6 +74,8 @@
              <p class="mjh-zc-cwts mjh-zc-ts2" hidden>手机号被使用过啦~</p>
              <p class="mjh-zc-cwts mjh-zc-ts3" hidden>两次输入的密码不一致~</p>
              <p class="mjh-zc-cwts mjh-zc-ts4" hidden>请输入正确的手机号</p>
+             <p class="mjh-zc-cwts mjh-zc-ts5" hidden>请输入4-16位数字、字母、下划线组成的用户名,字母开头</p>
+             <p class="mjh-zc-cwts mjh-zc-ts6" hidden>请输入6-16位密码</p>
              <!-- 输入框 结束-->
         </div>
         <!-- 01 基本信息 结束-->
