--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../../css/index.css" />
     <link rel="stylesheet" type="text/css" href="zhuce.css" />
 </head>
-<body>
+<body> 
     <div class="zlf_dl_wk">
         <img src="../../../images/yhp_images/yhp_backbtn.png" alt="" class="zlf_dl_back" />
         <a href="../login-mjh/login_mjh.html" class="mjh-dl-todl">登录</a>
@@ -53,7 +53,7 @@
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
-                    <div class="mjh-srnk-d3">密码</div>
+                    <div class="mjh-srnk-d3">密&nbsp;&nbsp;&nbsp;码</div>
                     <input type="password" class="mjh-srnk-d4 mjh-zck-mm1" required="required" />
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
                     <img src="../../../images/mjh/mjh_zc_11.gif" alt="" class="mjh-srnk-d5" />
@@ -61,7 +61,7 @@
                 <div class="mjh-zc-srnk">
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
-                    <div class="mjh-srnk-d3">确认</div>
+                    <div class="mjh-srnk-d3">确&nbsp;&nbsp;&nbsp;认</div>
                     <input type="password" class="mjh-srnk-d4 mjh-zck-mm2" required="required" />
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
                 </div>
