--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="pages/friendqun/friendqun.css" />
     <link rel="stylesheet" type="text/css" href="pages/addfriend/addfriend.css" />
     <link rel="stylesheet" type="text/css" href="pages/special/special.css" />
+    <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -25,8 +26,8 @@
 <script type="text/javascript" src="js/zepto.js"></script>
 <script type="text/javascript" src="js/touch.js"></script>
 <script type="text/javascript" src="js/rem.js"></script>
-<script type="text/javascript" src="route.js"></script>
-<!-- <script type="text/javascript" src="index.js"></script> -->
+<!-- <script type="text/javascript" src="route.js"></script> -->
+<script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="directive/directive.js"></script>
 <script type="text/javascript" src="pages/home/home.js"></script>
 <script type="text/javascript" src="pages/shujia/shujia.js"></script>
