--- a/pages/zhanghu/zhanghu.html
+++ b/pages/zhanghu/zhanghu.html
@@ -1,4 +1,101 @@
-<h2>这里是支付页面</h2>
+
+<!-- 支付外框开始 -->
+	<div class="yhp_payment_box">
+	<!-- 支付头部开始 -->
+		<div class="yhp_payment_up">
+			<label>
+				<button class="yhp_payment_back"></button>
+			</label>
+			<div class="yhp_payment_title">
+				<p class="yhp_payment_titleup">支付方式</p>
+				<p class="yhp_payment_titlebot">BANKCARD</p>
+			</div>
+			<label>
+				<button class="yhp_payment_search"></button>
+			</label>
+		</div>
+	<!-- 支付头部结束 -->
+
+	<!-- 支付主体开始 -->
+		<div class="payment_bottom">
+			<div class="yhp_payment_inner">
+			<!-- 支付方式选择开始 -->
+				<ul class="yhp_payment_ul">
+					<li class="yhp_payment_li">
+						<a href="##">
+							<div class="yhp_payment_lileft">
+								<img src="images/yhp_images/yhp_pay.png" alt="银行卡支付">
+							</div>
+							<div class="yhp_payment_right">
+								<div class="yhp_paymeth_up">
+									<span class="yhp_paymeth_tab">银行卡支付</span>
+									<span class="yhp_paymeth_icon">03</span>
+								</div>
+								<div class="yhp_pay_space"></div>
+								<p class="yhp_paymeth_text">使用绑定银行卡进行在线支付</p>
+							</div>
+						</a>
+					</li>
+					<li class="yhp_payment_li">
+						<a href="##">
+							<div class="yhp_payment_lileft">
+							<img src="images/yhp_images/yhp_pay1.png" alt="本地钱包">
+							</div>
+							<div class="yhp_payment_right">
+								<div class="yhp_paymeth_up">
+									<span class="yhp_paymeth_tab">本地钱包</span>
+									<span class="yhp_paymeth_icon1">NEWS</span>
+								</div>
+								<div class="yhp_pay_space"></div>
+								<p class="yhp_paymeth_text">使用本地钱包完成支付可获得更多优惠</p>
+							</div>
+						</a>
+					</li>
+					<li class="yhp_payment_li">
+						<a href="##">
+							<div class="yhp_payment_lileft">
+							<img src="images/yhp_images/yhp_pay2.png" alt="货到付款">
+							</div>
+							<div class="yhp_payment_right">
+								<div class="yhp_paymeth_up">
+									<span class="yhp_paymeth_tab">货到付款</span>
+								</div>
+								<div class="yhp_pay_space"></div>
+								<p class="yhp_paymeth_text">选择货到付款提交订单后完成此次操作</p>
+							</div>
+						</a>
+					</li>
+				</ul>
+			<!-- 支付方式选择结束 -->
+
+			<!-- 支付中介选择开始 -->
+				<div class="yhp_payment_choose">
+					<div class="yhp_chooseup">
+						<span class="yhp_chooseup_icon">	
+						</span>
+						<div class="yhp_chooseup_text">
+							<p class="yhp_chooseup_textup">支付中介选择</p>
+							<p class="yhp_chooseup_textbot">PAY AGENTS CHOOSE</p>
+						</div>
+						<div class="yhp_chooseup_space"></div>
+					</div>
+					<ul class="yhp_choose_ul">
+						<li class="yhp_choose_li">
+							<a href="##" class="yhp_choose_zhi"></a>
+						</li>
+						<li class="yhp_choose_li">
+							<a href="##" class="yhp_choose_chat"></a>
+						</li>
+					</ul>
+				</div>
+			<!-- 支付中介选择结束 -->
+			
+			<!-- 方式选择确认按钮 -->
+				<label> <button class="yhp_choose_sure"></button></label>
+			</div>
+		</div>
+	<!-- 支付主体结束 -->
+	</div>
+<!-- 支付外框结束 -->
 <!-- 底部tab -->
-    <indextab></indextab>
-    
+<indextab></indextab>
