--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="search.css" />
 </head>
 <body>
-    <div ng-view class="index_contain">
-        <div class="ld_qz_condi">
+    <div class="index_contain">
+        <!-- <div class="ld_qz_condi">
             <div class="ld_sy_search">
                 <form action=""><input type="text" placeholder="锦绣未央"/></form>
                 <div class="ld_sy_btn"></div>
@@ -45,7 +45,7 @@
                     <span>writer</span>
                 </div>
             </li>
-        </ul>
+        </ul> -->
         <!-- 社会圈子下面内容结束 -->
     <!-- 社区圈子结束 -->
     </div>
