--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -75,7 +75,7 @@
              <p class="mjh-zc-cwts mjh-zc-ts3" hidden>两次输入的密码不一致~</p>
              <p class="mjh-zc-cwts mjh-zc-ts4" hidden>请输入正确的手机号</p>
              <p class="mjh-zc-cwts mjh-zc-ts5" hidden>请输入4-16位数字、字母、下划线组成的用户名,字母开头</p>
-             <p class="mjh-zc-cwts mjh-zc-ts6" hidden>请输入6-16位密码</p>
+             <p class="mjh-zc-cwts mjh-zc-ts6" hidden>请输入6-16位有效密码</p>
              <!-- 输入框 结束-->
         </div>
         <!-- 01 基本信息 结束-->
