--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="js/zepto.js"></script>
 <script type="text/javascript" src="js/touch.js"></script>
 <script type="text/javascript" src="js/rem.js"></script>
+<script type="text/javascript" src="filter.js"></script>
 <!-- <script type="text/javascript" src="route.js"></script> -->
 <script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="directive/directive.js"></script>
