--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -18,7 +18,7 @@
     <!-- 标题 -->
     <indextitle titleenglish="NEW WORK PUSH" icon="images/mjh/sy-mjh_50.png" title="小编强势推" myhref="#/shujia"></indextitle>
     <div class="ld_book_box" ng-controller="shujia">
-        <shujiabook ng-repeat="v in shujiashoucang track by $index"></shujiabook>
+        <shujiabook ng-repeat="v in homeshujia track by $index"></shujiabook>
     </div>
 
     <!-- 也许有兴趣 -->
