--- a/pages/zhanghu/yhp_passpay/yhp_passpay.html
+++ b/pages/zhanghu/yhp_passpay/yhp_passpay.html
@@ -48,7 +48,7 @@
 				<!-- 总额显示区域开始 -->
 					<div class="yhp_passpay_count">
 						<span class="yhp_passpay_money">128.00</span>
-						<i class="yhp_passpay_unit">.RMB.</i>
+						<i class="yhp_passpay_unit">·RMB·</i>
 					</div>
 				<!-- 总额显示区域结束 -->
 
