--- a/pages/zhanghu/lrc_zhym/lrc_zfym.html
+++ b/pages/zhanghu/lrc_zhym/lrc_zfym.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
 	<meta charset="UTF-8">
 	<title>支付页面</title>
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../../../css/public.css">
 	<link rel="stylesheet" href="lrc_zfym.css">
 </head>
-<body>
+<body ng-controller="lrc_dingdan1">
 	<!-- 支付页面开始 -->
 	<div class="lrc_zfyms">
 		<div class="lrc_zti">
@@ -25,20 +25,20 @@
 	<div class="lrc_zfymx">
 		<div class="lrc_dw">
 			<div class="lrc_dww">
-				<div class="lrc_yikuai">
+				<div class="lrc_yikuai" ng-repeat="v in lrc_dingdan1 track by $index">
 					<a href="##">
 						<div class="lrc_yizi1"><img src="../../../images/lrc_images/lrc_zfym/lrc_yizi.png" alt=""></div>
 						<div class="lrc_yizi2">
 							<div class="lrc_xxfu">
-								<div class="lrc_wan1">商务套装BUSINESS SUIT</div>
-								<div class="lrc_wan2"><div class="lrc_lingyi">01</div></div>
+								<div class="lrc_wan1">{{v.title}}</div>
+								<div class="lrc_wan2"><div class="lrc_lingyi">{{v.number}}</div></div>
 							</div>
-							<p class="lrc_xxfzz">选择货到付款提交订单后完成此次操作</p>
+							<p class="lrc_xxfzz">{{v.tishi}}</p>
 						</div>
 					</a>
 					<div class="lrc_yizi3">
 						<p class="lrc_rmb">rmb</p>
-						<p class="lrc_rmbsz">126.00</p>
+						<p class="lrc_rmbsz">{{v.price}}</p>
 					</div>
 				</div>
 				<div class="lrc_erkuai">
@@ -57,7 +57,7 @@
 						<p class="lrc_rmbsz">156.00</p>
 					</div>
 				</div>
-				<div class="lrc_sankuai" style="border-top:0">
+				<div class="lrc_sankuai" style="border-top:0" >
 					<a href="##">
 						<div class="lrc_yizi1"><img src="../../../images/lrc_images/lrc_zfym/lrc_yizi.png" alt=""></div>
 						<div class="lrc_yizi2">
@@ -122,3 +122,5 @@
 </body>
 </html>
 <script src="../../../js/rem.js"></script>
+<script src="../../../js/angular.min.js"></script>
+<script src="lrc_zfym.js"></script>
