--- a/pages/zhanghu/lrc_zhym/lrc_zfym.html
+++ b/pages/zhanghu/lrc_zhym/lrc_zfym.html
@@ -41,7 +41,7 @@
 						<p class="lrc_rmbsz">{{v.price}}</p>
 					</div>
 				</div>
-				<div class="lrc_erkuai">
+<!-- 				<div class="lrc_erkuai">
 					<a href="##">
 						<div class="lrc_yizi1"><img src="../../../images/lrc_images/lrc_zfym/lrc_yizi.png" alt=""></div>
 						<div class="lrc_yizi2">
@@ -72,7 +72,7 @@
 						<p class="lrc_rmb">rmb</p>
 						<p class="lrc_rmbsz">226.00</p>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="lrc_zfje">
