--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="pages/friendqun/friendqun.css" />
     <link rel="stylesheet" type="text/css" href="pages/addfriend/addfriend.css" />
     <link rel="stylesheet" type="text/css" href="pages/special/special.css" />
+    <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
@@ -41,6 +42,7 @@
 <script type="text/javascript" src="pages/friendqun/friendqun.js"></script>
 <script type="text/javascript" src='pages/addfriend/addfriend.js'></script>
 <script type="text/javascript" src="pages/special/special.js"></script>
+<script type="text/javascript" src="pages/search/search.js"></script>
 
 
 
