--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -1,59 +1,140 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="search.css" />
-</head>
-<body>
-    <div class="index_contain">
-        <!-- <div class="ld_qz_condi">
-            <div class="ld_sy_search">
-                <form action=""><input type="text" placeholder="锦绣未央"/></form>
-                <div class="ld_sy_btn"></div>
+
+<!-- --沈阳个人主页页面开始-- -->
+<!-- 固定 -->
+    <!-- <div class="sy_fix">
+        <div class="sy_fslide"></div>
+        <div class="sy_fcenter">Park <b>Christ</b></div>
+        <div class="sy_fslide"></div>
+    </div> -->
+    <!-- 搜索失败头部开始 -->
+        <div class="yhp_searchfail_up">
+            <label>
+                <button class="yhp_searchfail_back"></button>
+            </label>
+            <div class="yhp_searchfail_title">
+                <p class="yhp_searchfail_titleup">搜索</p>
+                <p class="yhp_searchfail_titlebot">SEARCH</p>
             </div>
+            <label>
+                <button class="yhp_searchfail_search"></button>
+            </label>
         </div>
-        <ul class="sy_filterul">
-            <li class="sy_filterlis">
-                <div class="sy_fcircle_box">
-                    <div class="sy_fcircle active"></div>
+
+    <!-- 搜索失败头部结束 -->
+<!-- 留白块 -->
+    <!-- <div class="sy_empty"></div> -->
+<!-- 搜索 -->
+    <!-- <div class="ld_qz_condi">
+        <div class="ld_sy_search">
+            <form action=""><input type="text" placeholder="锦绣未央"/></form>
+            <div class="ld_sy_btn"></div>
+        </div>
+    </div> -->
+    <div class="ld_search ld_searchactive">
+            <div class="sy_qz_condi">
+                <div class="ld_sy_search">
+                    <form action=""><input type="text" placeholder="锦绣未央"/></form>
+                    <div class="ld_sy_btn"></div>
                 </div>
-                <div class="sy_fcon">
-                    <p>全部</p>
-                    <span>entire</span>
-                </div>
-            </li>
-            <li class="sy_filterlis">
-                <div class="sy_fcircle_box">
-                    <div class="sy_fcircle"></div>
-                </div>
-                <div class="sy_fcon">
-                    <p>作品</p>
-                    <span>article</span>
-                </div>
-            </li>
-            <li class="sy_filterlis">
-                <div class="sy_fcircle_box">
-                    <div class="sy_fcircle"></div>
-                </div>
-                <div class="sy_fcon">
-                    <p>作者</p>
-                    <span>writer</span>
-                </div>
-            </li>
-        </ul> -->
-        <!-- 社会圈子下面内容结束 -->
-    <!-- 社区圈子结束 -->
+            </div>
+            <ul class="sy_filterul">
+                <li class="sy_filterlis">
+                    <div class="sy_fcircle_box">
+                        <div class="sy_fcircle active"></div>
+                    </div>
+                    <div class="sy_fcon">
+                        <p>全部</p>
+                        <span>entire</span>
+                    </div>
+                </li>
+                <li class="sy_filterlis">
+                    <div class="sy_fcircle_box">
+                        <div class="sy_fcircle"></div>
+                    </div>
+                    <div class="sy_fcon">
+                        <p>作品</p>
+                        <span>article</span>
+                    </div>
+                </li>
+                <li class="sy_filterlis">
+                    <div class="sy_fcircle_box">
+                        <div class="sy_fcircle"></div>
+                    </div>
+                    <div class="sy_fcon">
+                        <p>作者</p>
+                        <span>writer</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+<!-- 订单部分 -->
+    <div class="sy_fcaption">
+        <!-- 标题 引用马锦慧 首页 的标题--> 
+        <div class="sy_sy-bt">
+            <p class="sy_sy-bty">search result</p>
+            <div class="sy_su-div"><img src="images/sy_images/sy_xiaoren.png" alt="" class="sy_su-btt" /><span class="sy_sy-bth">搜索结果</span></div>
+        </div>   
     </div>
-</body>
-</html>
-<script src="../../js/angular.min.js"></script>
-<script src="../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript"src="../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script type="text/javascript" src="../../index.js"></script>
+    <ul class="sy_line_ul">
+        <li class="sy_line_li">
+            <div class="sy_lines_left">
+                <div class="sy_line_lt"></div>
+            </div>
+            <div class="sy_lines_conbox">
+                <div class="sy_lines_contop">
+                    <p>庶女有毒之锦绣未央</p>
+                    <div class="sy_lines_english">
+                        <span>jinxiu not ended</span>
+                        <div class="sy_line_enright"></div>
+                    </div>
+                </div>
+                <div class="sy_lines_conbottom">
+                    <p>秦简 - 585章</p>
+                    <div class="sy_line_constars"></div>
+                </div>
+            </div>
+            <div class="sy_lines_right">
+                <div class="sy_liright_money">
+                    <img src="images/sy_images/sy_xin.png" alt="">
+                </div>
+            </div>
+            <div class="sy_line_border"></div>
+        </li>
+        <li class="sy_line_li">
+            <div class="sy_lines_left">
+                <div class="sy_line_lt"></div>
+            </div>
+            <div class="sy_lines_conbox">
+                <div class="sy_lines_contop">
+                    <p>庶女有毒之锦绣未央</p>
+                    <div class="sy_lines_english">
+                        <span>jinxiu not ended</span>
+                        <div class="sy_line_enright"></div>
+                    </div>
+                </div>
+                <div class="sy_lines_conbottom">
+                    <p>秦简 - 585章</p>
+                    <div class="sy_line_constars"></div>
+                </div>
+            </div>
+            <div class="sy_lines_right">
+                <div class="sy_liright_money">
+                    <img src="images/sy_images/sy_xin.png" alt="">
+                </div>
+            </div>
+            <div class="sy_line_border"></div>
+        </li>
+        
+    </ul>
+<!-- 支付金额 -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<!-- 底 -->
+    <div class="sy_bbottom"></div>
+
+<!-- --沈阳个人主页页面结束-- -->
