--- a/pages/shequ/shequ.html
+++ b/pages/shequ/shequ.html
@@ -3,8 +3,8 @@
     <div class="index_contain" ng-controller="shequ">
             <!-- <indexsearch></indexsearch> -->
         <!-- 搜索 -->
-        <div ng-class="{true:'ld_search ld_searchactive',false:'ld_search'}[searchFlag]">
-             <div class="sy_qz_condi">
+        <!-- <div ng-class="{true:'ld_search ld_searchactive',false:'ld_search'}[searchFlag]">
+            <div class="sy_qz_condi">
                 <div class="ld_sy_search">
                     <form action=""><input type="text" placeholder="锦绣未央"/></form>
                     <div class="ld_sy_btn"></div>
@@ -39,7 +39,7 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </div> -->
            
         <!-- 圈子顶部栏开始 -->
         <!-- <shequtopbar personurl="images/ld_images/ld_qz_photo.png" left="圈子" right="书友"></shequtopbar> -->
@@ -51,7 +51,7 @@
                 <li ng-class="{true:'ld_sq_quanzi ld_top_active',false:'ld_sq_quanzi'}[!topFlag]" ng-click="changeQuanzi(true)"><div class="ld_qz_wenzi">圈子</div><span></span></li>
                 <li ng-class="{true:'ld_sq_shuyou ld_top_active',false:'ld_sq_shuyou'}[topFlag]" ng-click="changeQuanzi(false)"><div class="ld_qz_wenzi">书友</div></li>
             </ul>
-            <div class="ld_sq_rig" ng-click="indexsearch()"></div>
+            <div class="ld_sq_rig"><a href="#/search"></a></div>
         </div>
 
         <!-- 圈子顶部栏结束 -->
