--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -10,14 +10,14 @@
     <indexbanner></indexbanner>
 
     <!-- banner下小轮播 -->
-    <div class="ld_book_box" ng-controller="shujia">
+    <div class="ld_book_lunbodi" ng-controller="shujia">
         <indexlunbo></indexlunbo>
     </div>
 
     <!-- 小编强势推 -->
     <!-- 标题 -->
     <indextitle titleenglish="NEW WORK PUSH" icon="images/mjh/sy-mjh_50.png" title="小编强势推" myhref="#/shujia"></indextitle>
-    <div class="ld_book_box" ng-controller="shujia">
+    <div class="ld_book_box">
         <shujiabook ng-repeat="v in homeshujia track by $index"></shujiabook>
     </div>
 
