--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -7,7 +7,7 @@
                 <li ng-class="{true:'ld_sq_quanzi ld_top_active',false:'ld_sq_quanzi'}[!topFlag]" ng-click="changeQuanzi(true)"><div class="ld_qz_wenzi">发现</div><span></span></li>
                 <li ng-class="{true:'ld_sq_shuyou ld_top_active',false:'ld_sq_shuyou'}[topFlag]" ng-click="changeQuanzi(false)"><div class="ld_qz_wenzi">收藏</div></li>
             </ul>
-            <div class="ld_sq_rig"></div>
+            <div class="ld_sq_rig"><a href="#/search"></a></div>
         </div>
         <!-- 书架-发现 开始-->
         <div class="zlf_container" ng-show="topFlag">
