--- a/pages/zhanghu/zhanghu.html
+++ b/pages/zhanghu/zhanghu.html
@@ -11,7 +11,7 @@
 				<p class="yhp_payment_titlebot">BANKCARD</p>
 			</div>
 			<label>
-				<button class="yhp_payment_search"></button>
+				<a href="#/search"><button class="yhp_payment_search"></button></a>
 			</label>
 		</div>
 	<!-- 支付头部结束 -->
