--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -149,6 +149,8 @@
         </div>
         <div class="gl_nnbottom">
             <p>{{v.contain}} </p>
+            <div class="gl_zz"></div>
+            <div class="gl_plpl"></div>
         </div>
     </div>
 </li>
