--- a/pages/person/person.html
+++ b/pages/person/person.html
@@ -91,67 +91,67 @@
     <ul class="sy_settimg_box">
         <li class="sy_setting_li">
             <div class="sy_set_leftimg">
-                <img src="../../images/sy_images/sy_help_navbg1.png" alt="">
+                <img src="../../images/sy_images/sy_item01.png" alt="">
             </div>
             <div class="sy_set_conbox">
-                <span class="sy_set_top">个人编辑</span>
+                <p class="sy_set_top">充值</p>
                 <div class="sy_set_border"></div>
-                <span class="sy_set_bottom">编辑个人资料</span>
+                <p class="sy_set_bottom">现在充值阅读币送免费会员一周</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <span> > </span> </div>
+                <div class="sy_setrght_con"> <img src="../../images/sy_images/sy_item07.png" alt=""> </div>
             </div>
         </li>
         <li class="sy_setting_li">
             <div class="sy_set_leftimg">
-                <img src="../../images/sy_images/sy_help_navbg1.png" alt="">
+                <img src="../../images/sy_images/sy_item02.png" alt="">
             </div>
             <div class="sy_set_conbox">
-                <span class="sy_set_top">个人编辑</span>
+                <p class="sy_set_top">个人编辑</p>
                 <div class="sy_set_border"></div>
-                <span class="sy_set_bottom">编辑个人资料</span>
+                <p class="sy_set_bottom">编辑个人资料</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <span> > </span> </div>
+                <div class="sy_setrght_con"> <img src="../../images/sy_images/sy_item07.png" alt=""> </div>
             </div>
         </li>
         <li class="sy_setting_li">
             <div class="sy_set_leftimg">
-                <img src="../../images/sy_images/sy_help_navbg1.png" alt="">
+                <img src="../../images/sy_images/sy_item03.png" alt="">
             </div>
             <div class="sy_set_conbox">
-                <span class="sy_set_top">个人编辑</span>
+                <p class="sy_set_top">WIFI自动缓存</p>
                 <div class="sy_set_border"></div>
-                <span class="sy_set_bottom">编辑个人资料</span>
+                <p class="sy_set_bottom">无线网情况下自动缓存收藏的书籍</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <span> > </span> </div>
+                <div class="sy_setrght_con"> <div class="sy_setrght_con-active"> </div> </div>
             </div>
         </li>
         <li class="sy_setting_li">
             <div class="sy_set_leftimg">
-                <img src="../../images/sy_images/sy_help_navbg1.png" alt="">
+                <img src="../../images/sy_images/sy_item04.png" alt="">
             </div>
             <div class="sy_set_conbox">
-                <span class="sy_set_top">个人编辑</span>
+                <p class="sy_set_top">清理内存</p>
                 <div class="sy_set_border"></div>
-                <span class="sy_set_bottom">编辑个人资料</span>
+                <p class="sy_set_bottom">清理缓存的章节，释放内存空间</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <span> > </span> </div>
+                <div class="sy_setrght_con"> <img src="../../images/sy_images/sy_item07.png" alt=""> </div>
             </div>
         </li>
         <li class="sy_setting_li">
             <div class="sy_set_leftimg">
-                <img src="../../images/sy_images/sy_help_navbg1.png" alt="">
+                <img src="../../images/sy_images/sy_item05.png" alt="">
             </div>
             <div class="sy_set_conbox">
-                <span class="sy_set_top">个人编辑</span>
+                <p class="sy_set_top">会员中心</p>
                 <div class="sy_set_border"></div>
-                <span class="sy_set_bottom">编辑个人资料</span>
+                <p class="sy_set_bottom">会员畅销全部书籍，免费阅读</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <span> > </span> </div>
+                <div class="sy_setrght_con"> <img src="../../images/sy_images/sy_item07.png" alt=""> </div>
             </div>
         </li>
     </ul>
