--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -2,6 +2,7 @@
     <div ng-controller="shujia">
         <!-- <shequtopbar personurl="images/ld_images/ld_qz_photo.png" left="发现" right="收藏"></shequtopbar> -->
         <div class="ld_sqtopbar">
+            <i class="ld_sq_dian"></i>
             <div class="ld_sq_photo"><a href="#/me"><img src="images/ld_images/ld_qz_photo.png" alt="" /></a></div>
             <ul class="ld_top_cen">
                 <li ng-class="{true:'ld_sq_quanzi ld_top_active',false:'ld_sq_quanzi'}[!topFlag]" ng-click="changeQuanzi(true)"><div class="ld_qz_wenzi">发现</div><span></span></li>
