--- a/directive/public/addfriendlis.html
+++ b/directive/public/addfriendlis.html
@@ -10,7 +10,7 @@
             <li>{{v.mes}}</li>
             <li class="ld_friend_zs"><i></i><b>{{v.local}}</b>{{v.local1}}</li>
         </ul>
-        <i class="ld_addfriend">已添加</i>
+        <div class="ld_addfriend_right"><i class="ld_addfriend">已添加</i></div>
         <!-- <div class="ld_sy_num ld_sy_numactive"><a href="{{v.url}}">已添加</a></div> -->
         <!-- <div ng-class="{true:'ld_firend_rig ld_firend_huise',false:'ld_firend_rig'}[{{v.iphone}}]"></div> -->
     </div>
