--- a/directive/public/commentlis.html
+++ b/directive/public/commentlis.html
@@ -1,14 +1,13 @@
 <!-- 社区下面好友列表 -->
-    <div class="ld_friend" ng-repeat="v in speciallis track by $index">
+    <div class="ld_friend" ng-repeat="v in addfriendlis track by $index">
         <div class="ld_friend_photo">
             <a href="#/friend">
                 <div class="ld_friend_inner"><img src="images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div>
             </a>
         </div>
         <ul class="ld_friend_con">
-            <li class="ld_friend_tit">{{v.title}}·<b>{{v.title1}}</b><div class="ld_star"><span></span><span></span><span></span></div></li>
+            <li class="ld_friend_tit">{{v.title}}·<b>{{v.title1}}</b><div class="ld_star"><span></span><span></span><span></span></div><i class="ld_vip" ng-show="{{v.vipflag}}">vip</i></li>
             <li>{{v.mes}}</li>
             <li class="ld_friend_zs"><i></i><b>{{v.local}}</b>{{v.local1}}</li>
         </ul>
-        <div class="ld_addfriend_right"><input type="radio" class="ld_special"/></div>
     </div>
