--- a/directive/public/friendqunlis.html
+++ b/directive/public/friendqunlis.html
@@ -10,6 +10,8 @@
             <li>{{v.mes}}</li>
             <li class="ld_friend_zs"><i></i><b>{{v.local}}</b>{{v.local1}}</li>
         </ul>
-        <div class="ld_sy_num ld_sy_numactive"><a href="{{v.url}}">{{v.num}}</a></div>
+        <div class="ld_addfriend_right">
+            <div class="ld_sy_num ld_sy_numactive"><a href="{{v.url}}">{{v.num}}</a></div>
+        </div>
         <!-- <div ng-class="{true:'ld_firend_rig ld_firend_huise',false:'ld_firend_rig'}[{{v.iphone}}]"></div> -->
     </div>
