--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link rel="stylesheet" type="text/css" href="pages/friendqun/friendqun.css" />
     <link rel="stylesheet" type="text/css" href="pages/addfriend/addfriend.css" />
     <link rel="stylesheet" type="text/css" href="pages/special/special.css" />
-    <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
+    <link rel="stylesheet" type="text/css" href="pages/comment/comment.css" />
+    <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -28,7 +29,6 @@
 <script type="text/javascript" src="js/touch.js"></script>
 <script type="text/javascript" src="js/rem.js"></script>
 <script type="text/javascript" src="filter.js"></script>
-<!-- <script type="text/javascript" src="route.js"></script> -->
 <script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="directive/directive.js"></script>
 <script type="text/javascript" src="pages/home/home.js"></script>
@@ -43,6 +43,7 @@
 <script type="text/javascript" src='pages/addfriend/addfriend.js'></script>
 <script type="text/javascript" src="pages/special/special.js"></script>
 <script type="text/javascript" src="pages/search/search.js"></script>
+<script type="text/javascript" src="pages/comment/comment.js"></script>
 
 
 
