--- a/directive/public/tongleituijian.html
+++ b/directive/public/tongleituijian.html
@@ -21,7 +21,7 @@
         </div>
         <div class="gl_nnbottom">
             <p>{{v.contain}} </p>
-            <div class="gl_zz"></div>
+            <div class="gl_zz"><a href="#/comment"></a></div>
             <div class="gl_plpl"></div>
         </div>
     </div>
