--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="pages/friendqun/friendqun.css" />
     <link rel="stylesheet" type="text/css" href="pages/addfriend/addfriend.css" />
     <link rel="stylesheet" type="text/css" href="pages/special/special.css" />
+    <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
     <link rel="stylesheet" type="text/css" href="pages/comment/comment.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
